<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.tytoo</groupId>
    <artifactId>jcefmaven</artifactId>
    <version>141.0.10</version>

    <packaging>jar</packaging>
    <name>JCef Maven</name>
    <description>This package provides wrappers to initialize the Java Chromium Embedded Framework</description>
    <url>https://github.com/trethore/jcefmaven/</url>

    <licenses>
        <license>
            <name>Apache-2.0 License</name>
            <url>https://github.com/trethore/jcefmaven/blob/master/LICENSE</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>tytoo</id>
            <name>Tytoo</name>
            <email>tytoo@users.noreply.github.com</email>
            <url>https://github.com/trethore</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/trethore/jcefmaven</connection>
        <developerConnection>scm:git:https://github.com/trethore/jcefmaven</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/trethore/jcefmaven</url>
    </scm>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>me.tytoo</groupId>
            <artifactId>jcef-api</artifactId>
            <version>jcef-2caef5a+cef-141.0.10+g1d65b0d+chromium-141.0.7390.123</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.28.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
    </dependencies>

</project>
